--- a/index.html
+++ b/index.html
@@ -5,8 +5,221 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header>
+      <a><img alt="Логотип магазина DEVICE" height="35" src="img/logo-header.png" width="163"></a>
+      <form action="#" method="post">
+        <input placeholder="Поиск по сайту" type="search">
+      </form>
+      <a href="#">Войти</a>
+      <a href="#">Сравнить</a>
+      <a href="#">Корзина</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Каталог товаров</a>
+            <ul>
+              <li><a href="#">Виртуальная реальность</a></li>
+              <li><a href="#">Моноподы для селфи</a></li>
+              <li><a href="#">Экшн-камеры</a></li>
+              <li><a href="#">Фитнес-браслеты</a></li>
+              <li><a href="#">Умные часы</a></li>
+              <li><a href="#">Квадрокоптеры</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <main>
+      <h1>Магазин DEVICE</h1>
+      <section>
+        <h2>Идеи для покупок</h2>
+        <ul>
+          <li>
+            <article>
+              <h3>Делай селфи, как Бен Стиллер!</h3>
+              <img alt="Селфи-палка как у Бена Стиллера" height="486" src="img/products/selfie-stick.png" width="384">
+              <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (<em>Восемь, Карл!</em>) метров длиной
+                и весом всего 5 килограмм.</p>
+              <a href="#">Подробнее</a>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Длина палки</td>
+                    <td>Вес палки</td>
+                    <td>Материал</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>8,5 м</td>
+                    <td>5 кг</td>
+                    <td>Карбон</td>
+                  </tr>
+                </tbody>
+              </table>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Худеем правильно!</h3>
+              <img alt="Мотивирующий фитнес-браслет" height="483" src="img/products/fitness-tracker.png" width="345">
+              <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+              <a href="#">Подробнее</a>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Без подзарядки</td>
+                  </tr>
+                </thead>
+                <tbody>
+                <tr>
+                  <td>48 часов</td>
+                </tr>
+                </tbody>
+              </table>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Пархает как бабочка, жалит как пчела!</h3>
+              <img alt="Крутой квадрокоптер с лазером" height="334" src="img/products/quadcopter.png" width="526">
+              <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
+                камеру.</p>
+              <a href="#">Подробнее</a>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Дальность полета</td>
+                    <td>Радиус поражения</td>
+                  </tr>
+                </thead>
+                <tbody>
+                <tr>
+                  <td>800 м</td>
+                  <td>50 м</td>
+                </tr>
+                </tbody>
+              </table>
+            </article>
+          </li>
+        </ul>
+        <ul>
+          <li><button disabled type="button">Делай селфи, как Бен Стиллер!</button></li>
+          <li><button type="button">Худеем правильно!</button></li>
+          <li><button type="button">Пархает как бабочка, жалит как пчела!</button></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Категории товаров</h2>
+        <ul>
+          <li><a href="#">Виртуальная реальность</a></li>
+          <li><a href="#">Моноподы для селфи</a></li>
+          <li><a href="#">Экшн-камеры</a></li>
+          <li><a href="#">Фитнес-браслеты</a></li>
+          <li><a href="#">Умные часы</a></li>
+          <li><a href="#">Квадрокоптеры</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наши услуги</h2>
+        <dl>
+          <dt>Доставка</dt>
+          <dd>
+            <h3>Доставка</h3>
+            <p>
+              Мы с удовольствием доставим ваш товар прямо к вашему<br>
+              подъезду совершенно бесплатно! Ведь мы неплохо<br>
+              заработаем, поднимая его на ваш этаж.
+            </p>
+          </dd>
+          <dt>Гарантия</dt>
+          <dd>
+            <h3>Гарантия</h3>
+            <p>
+              Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br>
+              Товар, не дом, конечно же.
+            </p>
+          </dd>
+          <dt>Кредит</dt>
+          <dd>
+            <h3>Кредит</h3>
+            <p>
+              Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные<br>
+              условия кредита. Выгодные для нашего банка, разумеется.
+            </p>
+          </dd>
+        </dl>
+      </section>
+      <section>
+        <h2>Представленные у нас бренды</h2>
+        <ul>
+          <li><img alt="Логотип компании DJI" height="100" src="img/brands/dji.png" width="260"></li>
+          <li><img alt="Логотип компании SP GADGETS" height="100" src="img/brands/sp-gadgets.png" width="260"></li>
+          <li><img alt="Логотип компании Go Pro" height="100" src="img/brands/go-pro.png" width="260"></li>
+          <li><img alt="Логотип компании VIVE" height="100" src="img/brands/vive.png" width="260"></li>
+        </ul>
+      </section>
+      <section>
+        <h2>О нас</h2>
+        <p>
+          Огромный выбор гаджетов не оставит равнодушным гика,<br>
+          который есть в каждом из нас.
+        </p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
+          компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#">Подробнее о нас</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>
+          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br>
+          проверить работоспособность покупки. Всякое бывает.
+        </p>
+        <!-- Здесь будет карта. -->
+        <a href="#">Напишите нам</a>
+      </section>
+    </main>
 
+    <footer>
+      <a><img alt="Логотип магазина DEVICE" height="35" src="img/logo-footer.png" width="163"></a>
+      <div>
+        <a href="#">Войти</a>
+        <a href="#">Сравнить</a>
+        <a href="#">Корзина</a>
+      </div>
+      <address>г. Москва, ул. Строителей, 15</address>
+      <ul>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <a href="tel:+74954959595">+7 (495) 495-95-95</a>
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Twitter</a></li>
+      </ul>
+      <a href="#">HTML Academy</a>
+    </footer>
+
+    <section>
+      <h2>Напишите нам</h2>
+      <!-- Здесь будет форма. -->
+      <button type="submit">Отправить</button>
+    </section>
+
+    <section>
+      <h2>Карта</h2>
+      <!-- Здесь будет карта. -->
+    </section>
   </body>
 </html>
