--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
                 и весом всего 5 килограмм.</p>
               <a href="#">Подробнее</a>
               <table>
+                <caption>Характеристики товара</caption>
                 <thead>
                   <tr>
-                    <td>Длина палки</td>
-                    <td>Вес палки</td>
-                    <td>Материал</td>
+                    <th>Длина палки</th>
+                    <th>Вес палки</th>
+                    <th>Материал</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -70,15 +71,16 @@
               <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
               <a href="#">Подробнее</a>
               <table>
+                <caption>Характеристики товара</caption>
                 <thead>
                   <tr>
-                    <td>Без подзарядки</td>
+                    <th>Без подзарядки</th>
                   </tr>
                 </thead>
                 <tbody>
-                <tr>
-                  <td>48 часов</td>
-                </tr>
+                  <tr>
+                    <td>48 часов</td>
+                  </tr>
                 </tbody>
               </table>
             </article>
@@ -91,26 +93,27 @@
                 камеру.</p>
               <a href="#">Подробнее</a>
               <table>
+                <caption>Характеристики товара</caption>
                 <thead>
                   <tr>
-                    <td>Дальность полета</td>
-                    <td>Радиус поражения</td>
+                    <th>Дальность полета</th>
+                    <th>Радиус поражения</th>
                   </tr>
                 </thead>
                 <tbody>
-                <tr>
-                  <td>800 м</td>
-                  <td>50 м</td>
-                </tr>
+                  <tr>
+                    <td>800 м</td>
+                    <td>50 м</td>
+                  </tr>
                 </tbody>
               </table>
             </article>
           </li>
         </ul>
         <ul>
-          <li><button disabled type="button">Делай селфи, как Бен Стиллер!</button></li>
-          <li><button type="button">Худеем правильно!</button></li>
-          <li><button type="button">Пархает как бабочка, жалит как пчела!</button></li>
+          <li><button disabled type="button">Открыть первый слайд</button></li>
+          <li><button type="button">Открыть второй слайд</button></li>
+          <li><button type="button">Открыть третий слайд</button></li>
         </ul>
       </section>
       <section>
@@ -130,27 +133,20 @@
           <dt>Доставка</dt>
           <dd>
             <h3>Доставка</h3>
-            <p>
-              Мы с удовольствием доставим ваш товар прямо к вашему<br>
-              подъезду совершенно бесплатно! Ведь мы неплохо<br>
-              заработаем, поднимая его на ваш этаж.
-            </p>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
+              заработаем, поднимая его на ваш этаж.</p>
           </dd>
           <dt>Гарантия</dt>
           <dd>
             <h3>Гарантия</h3>
-            <p>
-              Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br>
-              Товар, не дом, конечно же.
-            </p>
+            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.
+              Товар, не дом, конечно же.</p>
           </dd>
           <dt>Кредит</dt>
           <dd>
             <h3>Кредит</h3>
-            <p>
-              Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные<br>
-              условия кредита. Выгодные для нашего банка, разумеется.
-            </p>
+            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
+              кредита. Выгодные для нашего банка, разумеется.</p>
           </dd>
         </dl>
       </section>
@@ -165,10 +161,7 @@
       </section>
       <section>
         <h2>О нас</h2>
-        <p>
-          Огромный выбор гаджетов не оставит равнодушным гика,<br>
-          который есть в каждом из нас.
-        </p>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
           компаниями:</p>
         <ul>
@@ -191,11 +184,11 @@
 
     <footer>
       <a><img alt="Логотип магазина DEVICE" height="35" src="img/logo-footer.png" width="163"></a>
-      <div>
+      <p>
         <a href="#">Войти</a>
         <a href="#">Сравнить</a>
         <a href="#">Корзина</a>
-      </div>
+      </p>
       <address>г. Москва, ул. Строителей, 15</address>
       <ul>
         <li><a href="#">Доставка</a></li>
@@ -208,7 +201,7 @@
         <li><a href="#">Instagram</a></li>
         <li><a href="#">Twitter</a></li>
       </ul>
-      <a href="#">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
     </footer>
 
     <section>
