--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a><img alt="Логотип магазина DEVICE" height="35" src="img/logo-header.png" width="163"></a>
-      <form action="#" method="post">
+      <form action="#" method="get">
         <input placeholder="Поиск по сайту" type="search">
       </form>
       <a href="#">Войти</a>
@@ -201,7 +201,7 @@
         <li><a href="#">Instagram</a></li>
         <li><a href="#">Twitter</a></li>
       </ul>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss" rel="noopener noreferrer" target="_blank">HTML Academy</a>
     </footer>
 
     <section>
