feat: add catalog page

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Каталог товаров</a>
+            <a href="catalog.html">Каталог товаров</a>
             <ul>
-              <li><a href="#">Виртуальная реальность</a></li>
-              <li><a href="#">Моноподы для селфи</a></li>
-              <li><a href="#">Экшн-камеры</a></li>
-              <li><a href="#">Фитнес-браслеты</a></li>
-              <li><a href="#">Умные часы</a></li>
-              <li><a href="#">Квадрокоптеры</a></li>
+              <li><a href="catalog.html">Виртуальная реальность</a></li>
+              <li><a href="catalog.html">Моноподы для селфи</a></li>
+              <li><a href="catalog.html">Экшн-камеры</a></li>
+              <li><a href="catalog.html">Фитнес-браслеты</a></li>
+              <li><a href="catalog.html">Умные часы</a></li>
+              <li><a href="catalog.html">Квадрокоптеры</a></li>
             </ul>
           </li>
           <li><a href="#">Доставка</a></li>
@@ -119,12 +119,12 @@
       <section>
         <h2>Категории товаров</h2>
         <ul>
-          <li><a href="#">Виртуальная реальность</a></li>
-          <li><a href="#">Моноподы для селфи</a></li>
-          <li><a href="#">Экшн-камеры</a></li>
-          <li><a href="#">Фитнес-браслеты</a></li>
-          <li><a href="#">Умные часы</a></li>
-          <li><a href="#">Квадрокоптеры</a></li>
+          <li><a href="catalog.html">Виртуальная реальность</a></li>
+          <li><a href="catalog.html">Моноподы для селфи</a></li>
+          <li><a href="catalog.html">Экшн-камеры</a></li>
+          <li><a href="catalog.html">Фитнес-браслеты</a></li>
+          <li><a href="catalog.html">Умные часы</a></li>
+          <li><a href="catalog.html">Квадрокоптеры</a></li>
         </ul>
       </section>
       <section>
