--- a/catalog.html
+++ b/catalog.html
@@ -11,11 +11,11 @@
         <input placeholder="Поиск по сайту" type="search">
       </form>
       <p>
-        Валентин Петухов
-        <button type="button">Выйти</button>
+        <a href="#">Валентин Петухов</a>
+        <a href="#">Выйти</a>
+        <a href="#">Сравнить</a>
+        <a href="#">Корзина</a>
       </p>
-      <a href="#">Сравнить</a>
-      <a href="#">Корзина</a>
       <nav>
         <ul>
           <li>
@@ -38,11 +38,11 @@
 
     <main>
       <h1>Моноподы для селфи</h1>
-      <ol>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог товаров</a></li>
-        <li><a href="catalog.html">Моноподы для селфи</a></li>
-      </ol>
+      <p>
+        <a href="index.html">Главная</a>
+        <a href="catalog.html">Каталог товаров</a>
+        <span>Моноподы для селфи</span>
+      </p>
       <section>
         <h2>Фильтр</h2>
         <!-- Здесь будет форма. -->
@@ -60,7 +60,7 @@
               <h3><a href="#">Любительская селфи-палка</a></h3>
               <p>500 руб.</p>
               <p>
-                <button type="button">В корзину</button>
+                <a href="#">В корзину</a>
                 <button type="button">Добавить к сравнению</button>
               </p>
             </article>
@@ -71,7 +71,7 @@
               <h3><a href="#">Профессиональная селфи-палка</a></h3>
               <p>1500 руб.</p>
               <p>
-                <button type="button">В корзину</button>
+                <a href="#">В корзину</a>
                 <button type="button">Добавить к сравнению</button>
               </p>
             </article>
@@ -82,7 +82,7 @@
               <h3><a href="#">Непотопляемая селфи-палка</a></h3>
               <p>2500 руб.</p>
               <p>
-                <button type="button">В корзину</button>
+                <a href="#">В корзину</a>
                 <button type="button">Добавить к сравнению</button>
               </p>
             </article>
@@ -93,7 +93,7 @@
               <h3><a href="#">Селфи-палка «Следуй за мной»</a></h3>
               <p>4900 руб.</p>
               <p>
-                <button type="button">В корзину</button>
+                <a href="#">В корзину</a>
                 <button type="button">Добавить к сравнению</button>
               </p>
               <b>new</b>
@@ -113,8 +113,8 @@
     <footer>
       <a href="index.html"><img alt="Логотип магазина DEVICE" height="35" src="img/logo-footer.png" width="163"></a>
       <p>
-        Валентин Петухов
-        <button type="button">Выйти</button>
+        <a href="#">Валентин Петухов</a>
+        <a href="#">Выйти</a>
         <a href="#">Сравнить</a>
         <a href="#">Корзина</a>
       </p>
